fix display error on mobile

--- a/game/static/game/default_design.css
+++ b/game/static/game/default_design.css
@@ -24,12 +24,13 @@ footer{
 header{
     color: white;
     background-color: #555;
+    overflow: auto;
 }
 
 header h1{
     font-size: 2em;
     font-weight: bold;
-    width: 80%;
+    /*width: 80%;*/
     display: inline-block;
     margin: 0px;
     padding-left: 5px;
@@ -44,6 +45,7 @@ h1 a{
     text-align: right;
     float: right;
     padding-top: 10px;
+    padding-bottom: 3px;
     padding-right: 2px;
 }
 
